--- a/blog-parent/blog-web/pom.xml
+++ b/blog-parent/blog-web/pom.xml
@@ -28,6 +28,13 @@
 			<artifactId>javaee-web-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>jaxrs-api</artifactId>
+			<version>3.0.9.Final</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>br.com.hub.blog</groupId>
